# tex-pdf-corrections

./: .gitignore  README.md  environment.yaml  pyproject.toml
TeX/: breakteich.tex  greek_alphabet.tex  interuptedline.tex  mark.tex  mosteqrefdiff.tex  noeqref.tex  output.tex  positions.txt  source0.tex  tall_line.tex  tiny.tex
TeX/arXiv2512.21267v1/: 00README.json  geom21267.tex
TeX/newmarking/: control.tex  literalfail.tex  orig_positions.txt  pdfsavepos.tex  pdfstream.txt  positions.txt  simplepdfliteral.tex
extract_annots/: draw_bbs.py  extannots.py
src/searchtex/: segmentsource.py
src/searchtex/test_segmentsource/: _test.tex  marked_source0.tex  marked_test.tex
src/texpdfannots/: extract.py
src/texpdfedits/: extract.py  segmentsource.py
tests/: ann0_corrections_out.txt  arxiv2512_21305_annotated_misctest2_corrections_out.txt  arxiv2512_21305_corrections.txt  arxiv2512_21305_corrections2.txt  draw_bbs.py  largest_substring.py  search.tex  selection_out.txt  test_extract.py  test_segment.py
tests/bbox_drawings/: ann0_corrections_out.txt  interuptedline_corrections_out.txt  tall_ann_corrections_out.txt
tests/drawn_bboxes/: tall_ann_corrections_out.txt
tests/tmp_segmentsource/: boxpositions_endomorphisms.txt  boxpositions_source0.txt  boxpositions_tiny.txt  boxpositions_verysimplesource.txt  endomorphisms.tex  endomorphisms_marked.tex  source0_marked.tex  teichmuller.tex  tiny_marked.tex  verysimplesource.tex  verysimplesource_marked.tex
tex_sources/: txfonts_test.tex
tmp_segmentsource/: boxpositions_mosteqrefdiff.txt  mosteqrefdiff_marked.tex
(+18 files in other folders)
