[project]
name = "texpdfannots"
version = "0.0.0"
description = ""
authors = [
    {name = "Charles Kolozsvary",email = "charleskolozsvary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.26.6,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
